# analisador-email-main-main

./: .gitignore  README.md  package-lock.json  package.json  turbo.json
apps/backend/: .env.example  pyproject.toml  vercel.json
apps/backend/src/: main.py  test_emails.py  vercel_app.py
apps/backend/src/classifiers/: nlp_classifier.py  response_generator.py
apps/backend/src/models/: schemas.py
apps/backend/src/utils/: text_processor.py
apps/frontend/: angular.json  package.json
apps/frontend/src/: index.html  main.ts  styles.css
apps/frontend/src/app/: app.component.css  app.component.html  app.component.ts  app.module.ts
apps/frontend/src/app/components/email-upload/: email-upload.component.css  email-upload.component.html  email-upload.component.ts
apps/frontend/src/app/components/loading-spinner/: loading-spinner.component.ts
apps/frontend/src/app/components/result-display/: result-display.component.css  result-display.component.html  result-display.component.ts
apps/frontend/src/app/models/: email-analysis.ts
apps/frontend/src/app/pipes/: file-size.pipe.ts
apps/frontend/src/app/services/: email-classifier.service.ts
