[project]
name = "analisador-email-backend"
version = "0.1.0"
description = "Analisador de emails"
readme = "README.md"


dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "nltk==3.8.1",
    "openai==0.28.0",
    "pdfplumber==0.10.2",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
    "numpy>1.24.3",
    "python-multipart"
]
